# OpenGL-S4

./: CMakeLists.txt  README.md
TP1/: ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp
TP1/shaders/: triangle.vs.glsl
TP2/: ex01.cpp  ex02.cpp  ex03.cpp
TP2/shaders/: color2D.fs.glsl  color2D.vs.glsl  grey2D.fs.glsl  tex2D.fs.glsl  tex2D.vs.glsl
TP4/: ex01.cpp
TP4/shaders/: 3D.vs.glsl  normals.fs.glsl
glimac/: CMakeLists.txt
